--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,6 +34,14 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
+        
+    - name: Echo 1
+      run: echo pliki ${{ github.ref }}.zip
+
+    - name: Echo 2
+      run: echo $EVENT
+      env:
+        EVENT: ${{ tojson(github.event) }}
 
     - name: Upload Release Asset
       id: upload-release-asset 
