--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,30 +10,30 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+#    - name: Checkout
+#      uses: actions/checkout@v2
 
-    - name: Install Dependencies
-      run: npm install
+#    - name: Install Dependencies
+#      run: npm install
 
-    - name: Build
-      run: npm run build
+#    - name: Build
+#      run: npm run build
 
-    - name: Zip
-      uses: montudor/action-zip@v0.1.0
-      with:
-        args: zip -qq -r ./build.zip ./build
+#    - name: Zip
+#      uses: montudor/action-zip@v0.1.0
+#      with:
+#        args: zip -qq -r ./build.zip ./build
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
+#    - name: Create Release
+#      id: create_release
+#      uses: actions/create-release@v1
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      with:
+#        tag_name: ${{ github.ref }}
+#        release_name: Release ${{ github.ref }}
+#        draft: false
+#        prerelease: false
         
     - name: Echo 1
       run: echo pliki ${{ github.ref }}.zip
@@ -43,13 +43,13 @@ jobs:
       env:
         EVENT: ${{ tojson(github.event) }}
 
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./build.zip
-        asset_name: pliki ${{ github.ref }}.zip
-        asset_content_type: application/zip
+#    - name: Upload Release Asset
+#      id: upload-release-asset 
+#      uses: actions/upload-release-asset@v1
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      with:
+#        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+#        asset_path: ./build.zip
+#        asset_name: pliki ${{ github.ref }}.zip
+#        asset_content_type: application/zip
