--- a/.github/workflows/update_release.yml
+++ b/.github/workflows/update_release.yml
@@ -30,15 +30,13 @@ jobs:
       with:
         args: zip -qq -r ./build.zip ./build
         
-#    - name: Upload Release Asset
-#      id: upload-release-asset 
-#      uses: actions/upload-release-asset@v1
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      with:
-#        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-#        asset_path: ./build.zip
-#        asset_name: pliki ${{ github.ref }}.zip
-#        asset_content_type: application/zip
-        
-        
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }} 
+        asset_path: ./build.zip
+        asset_name: ${{ github.event.release.tag_name }}.zip
+        asset_content_type: application/zip       
